Fix moving print job to another printer

BUG: 378446
FIXED-IN: 17.04.2

REVIEW: 130063